Opened 12 years ago

Closed 12 years ago

#3592 closed defect (fixed)

libavfilter pkg-config is broken

Reported by: Kieran Kunhya Owned by:
Priority: normal Component: avfilter
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Libavfilter depends on libavcodec but this is not reflected in pkg-config.

Change History (1)

comment:1 by Carl Eugen Hoyos, 12 years ago

Resolution: fixed
Status: newclosed
Version: unspecifiedgit-master

Fixed by Michael in 617e866e

Note: See TracTickets for help on using tickets.